fix: fix displaying a button on ios
added color: black

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ button {
   background-color: #fff;
   appearance: none;
   cursor: pointer;
+  color: black;
 }
 
 a,
